Define and use SburbCodeComponent.EMPTY as default value for getters